# onnx-inference-yolo

./: LICENSE  README.md  inference_script.py  pyproject.toml
data_models/: bounding_box.py  detected_objects.py  image.py  images_input.py  onnx_base.py  onnx_object_detection.py
utils/: visualization.py
