[tool.poetry]
name = "onnx-inference-yolo"
version = "0.1.0"
description = "ONNX inference for Object Detection Models"
authors = ["Anwesh <anwesh.marwade@pon.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "onnx_inference_yolo"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.1"
onnxruntime = "1.13.1"
onnx = "1.13.0"
opencv-python = "^4.7.0.68"
pydantic = "1.10.4"
torch = [
            {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_10_9_x86_64.whl"},
            #{markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-1.9.0-cp38-none-macosx_11_0_arm64.whl"},
            #{markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp38-cp38-linux_x86_64.whl"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
